#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(ysserver, 1.0.0, 42478313@qq.com)
AM_INIT_AUTOMAKE([foreign])

# Checks for programs.
#AC_PROG_RANLIB
LT_INIT
AC_PROG_CXX
AC_PROG_LIBTOOL

AC_CONFIG_HEADERS([conf.h])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 lib/utility/Makefile
                 lib/perf/Makefile
                 lib/rpc/Makefile
                 lib/package/Makefile
                 lib/ys_lua/Makefile
                 lib/ys_log/Makefile
                 lib/thread_pool/Makefile
                 lib/jpack/Makefile
                 lib/mysql/Makefile
                 lib/db_service/Makefile
                 mysrv/Makefile
                 mysrv/common/Makefile
                 mysrv/gateway/Makefile
                 ])
AC_OUTPUT
